Cooker 4 platten, speicherung, bilder,… waschmaschine on off button ein aus schalten, speicherung versucht (geht nicht)

--- a/SmartHome/SHDetailviewBasementLaundryVC.xib
+++ b/SmartHome/SHDetailviewBasementLaundryVC.xib
@@ -183,6 +183,14 @@
 					<int key="connectionID">3</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">buttonStartWashing</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="429760798"/>
+					</object>
+					<int key="connectionID">127</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">backToSH:</string>
 						<reference key="source" ref="134032960"/>
@@ -668,7 +676,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">126</int>
+			<int key="maxID">127</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
