- tab jalousie - one error: zweimal OFF oder zweimal ON

--- a/SmartHome/SHDetailviewLivingroomTVVC.xib
+++ b/SmartHome/SHDetailviewLivingroomTVVC.xib
@@ -240,10 +240,9 @@
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
 			<object class="IBUILabel" id="373296414">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<string key="NSFrameSize">{42, 21}</string>
-				<reference key="NSSuperview"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClipsSubviews">YES</bool>
